refactor: update index.html file

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <li>Use of JavaScript to implement the functionality</li>
                             </ul>
                         </li>
-                        <li class="projects-item"><h4><a href="https://kseniiamarkova.github.io/rsschool-cv-2024Q2/" class="link">Curriculum Vitae for stage0 RS-school:</a></h4>
+                        <li class="projects-item"><h4><a href="https://kseniiamarkova.github.io/rsschool-cv-2024Q2/" class="link">CV for Stage 0</a> и <a href="https://KseniiaMarkova.github.io/rsschool-cv/" class="link">CV for Stage 1</a> RS-school:</h4>
                             <ul>
                                 <li>Working with Git and GitHub</li>
                                 <li>Using Markdown markup language</li>
